force-app/main/default/objects/Seance__c/Seance__c.object-meta.xml
<CustomObject>
    <description>Objet de jonction Film - Cinéma</description>
    <label>Séance</label>
    <nameField>
        <displayFormat>{YY}-{MM}-{000000}</displayFormat>
        <label>Numéro de la séance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Séances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>