force-app/main/default/objects/Seance__c/fields/CodeSeance__c.field-meta.xml
<CustomField>
    <fullName>CodeSeance__c</fullName>
    <externalId>true</externalId>
    <label>Code Séance</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>