force-app/main/default/objects/Seance__c/fields/Complexe__c.field-meta.xml
<CustomField>
    <fullName>Complexe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complexe</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Films programmés</relationshipLabel>
    <relationshipName>Seances</relationshipName>
    <type>Lookup</type>
</CustomField>