force-app/main/default/objects/Seance__c/fields/DateSeance__c.field-meta.xml
<CustomField>
    <fullName>DateSeance__c</fullName>
    <label>Date Séance</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>