force-app/main/default/objects/Seance__c/fields/DimensionFilm2D3D__c.field-meta.xml
<CustomField>
    <fullName>DimensionFilm2D3D__c</fullName>
    <label>Dimension Film 2D / 3D</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2D</fullName>
            </value>
            <value>
                <fullName>3D_ACTIVE</fullName>
            </value>
            <value>
                <fullName>3D_PASSIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>