force-app/main/default/objects/Seance__c/fields/DimensionSeance__c.field-meta.xml
<CustomField>
    <fullName>DimensionSeance__c</fullName>
    <label>Dimension Séance VO/VF/VFSTF</label>
    <length>5</length>
    <type>Text</type>
</CustomField>