force-app/main/default/objects/Seance__c/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film</label>
    <referenceTo>Film__c</referenceTo>
    <relationshipLabel>Cinémas programmés</relationshipLabel>
    <relationshipName>Seances</relationshipName>
    <type>Lookup</type>
</CustomField>