force-app/main/default/objects/Seance__c/fields/HeureSeance__c.field-meta.xml
<CustomField>
    <fullName>HeureSeance__c</fullName>
    <label>Heure Séance</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>