force-app/main/default/objects/Seance__c/fields/NumeroSalle__c.field-meta.xml
<CustomField>
    <fullName>NumeroSalle__c</fullName>
    <label>Numéro de Salle</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>