force-app/main/default/objects/Seance__c/fields/Numerotation__c.field-meta.xml
<CustomField>
    <fullName>Numerotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Numérotation</label>
    <type>Checkbox</type>
</CustomField>