force-app/main/default/objects/Seance__c/fields/Semaine__c.field-meta.xml
<CustomField>
    <fullName>Semaine__c</fullName>
    <label>Semaine</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>