force-app/main/default/objects/Seance__c/fields/TypeSeance__c.field-meta.xml
<CustomField>
    <fullName>TypeSeance__c</fullName>
    <label>Type de Séance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>